@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-836: Delay hive preparation until after the arguments are parsed (this allows 
+  functionality such as creating a table) (aching)
+
   GIRAPH-843: remove rexter from hadoop_facebook profile (pavanka via aching)
 
   GIRAPH-838: setup time & total time counter also include time spent waiting for machines
